--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -11,10 +11,10 @@
         </ng-template>
     </p-toolbar>
     <div class="w-full flex flex-col">
-        <label for="details" class="block mb-1 font-medium">Coachees activos <p-button icon="pi pi-info-circle"
+        <label for="coachees" class="block mb-1 font-medium">Coachees activos <p-button icon="pi pi-info-circle"
                 text severity="info" [size]="'small'" /></label>
         <p-table [value]="coachees()" selectionMode="single" [(selection)]="selectedCoachee" dataKey="id"
-            scrollHeight="flex" id="details" [size]="'small'" disabled>
+            scrollHeight="flex" id="coachee" [size]="'small'" disabled>
             <ng-template #header>
                 <tr>
                     <th [width]="'80%'">Nombre</th>
