--- a/frontend/src/app/session/session.css
+++ b/frontend/src/app/session/session.css
@@ -4,3 +4,9 @@ p-panel {
   --p-panel-content-padding: 0rem 0.5rem 0.5rem 0.5rem;
   --p-panel-footer-padding: 0rem;
 }
+.rotated-table {
+  transform: rotate(90deg);
+  transform-origin: top left;  /* Ajustar según comodidad */
+  display: inline-block; 
+  left: 500px; /* ajuste según contexto */
+}
