--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -30,11 +30,11 @@
                         <p-button icon="pi pi-id-card" text severity="info" tooltip="Ver perfil" />
                         <p-button icon="pi pi-file-plus" text severity="success" tooltip="Nueva Sesión"
                             (onClick)="goSession()" />
-                        <p-button icon="pi pi-folder-plus" text severity="help" tooltip="Nuevo Resumen" (onClick)="goSummary()" />
+                        <p-button icon="pi pi-folder-plus" text severity="help" tooltip="Nuevo Resumen"
+                            (onClick)="goSummary()" />
                         <p-button icon="pi pi-history" text severity="warn" tooltip="Ver historial" />
                     </td>
                 </tr>
             </ng-template>
         </p-table>
-
     </div>
