--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -10,6 +10,7 @@
             <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
         </ng-template>
     </p-toolbar>
+    <p-confirmdialog />
     <div class="w-full flex flex-col">
         <label for="coachees" class="block mb-1 font-medium">Coachees activos <p-button icon="pi pi-info-circle" text
                 severity="info" [size]="'small'" /></label>
@@ -34,10 +35,11 @@
                         <p-button icon="pi pi-folder-plus" text severity="help" tooltip="Nuevo Resumen"
                             (onClick)="goSummary()" />
                         <p-button icon="pi pi-history" text severity="warn" tooltip="Ver historial" />
+                        <p-button icon="pi pi-trash" text severity="danger" tooltip="Eliminar Coachee" (onClick)="showRemoveDialog($event, coachee.id)"/>
                     </td>
                 </tr>
             </ng-template>
         </p-table>
-        <p-button class="self-end pt-3" icon="pi pi-user-plus" severity="info" label="Nuevo Coachee"
+        <p-button class="self-center pt-3" icon="pi pi-user-plus" severity="info" label="Nuevo Coachee"
             tooltip="Nuevo Coachee" [routerLink]="['/coachee', '']" />
     </div>
