feat: added process new info in interface, dto and functions #72

--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -42,4 +42,10 @@
         </p-table>
         <p-button class="self-center pt-3" icon="pi pi-user-plus" severity="info" label="Nuevo Coachee"
             tooltip="Nuevo Coachee" [routerLink]="['/coachee', '']" />
-    </div>
+        <!-- <p-button class="self-center pt-3" severity="info" label="Nuevo Proceso" (onClick)="createP(coacheeId)"/>
+        <p-button class="self-center pt-3" severity="info" label="Modifica Proceso" (onClick)="updateP(processId)"/>
+        <p-button class="self-center pt-3" severity="info" label="Elimina Proceso" (onClick)="deleteP(processId)"/>
+        <p-button class="self-center pt-3" severity="info" label="Archiva Proceso" (onClick)="removeP(processId)"/>
+        <p-button class="self-center pt-3" severity="info" label="Desarchiva Proceso" (onClick)="restoreP(processId)"/> -->
+
+        </div>
