--- a/frontend/src/app/process/process.html
+++ b/frontend/src/app/process/process.html
@@ -8,7 +8,7 @@
         </ng-template>
         <ng-template #end>
             <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
-            <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goBackToCoachee()" />
+            <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goCoachees()" />
         </ng-template>
     </p-toolbar>
     <p-confirmdialog />
