--- a/frontend/src/app/process/process.html
+++ b/frontend/src/app/process/process.html
@@ -119,7 +119,7 @@
 
         </div>
 
-        <div class="flex justify-end mt-4 gap-4">
+        <div class="flex justify-center mt-4 gap-4">
             <!-- <p-button type="button" label="Borrar" severity="secondary" [outlined]="true"
                 (onClick)="processForm.reset()" /> -->
             <p-button type="submit" label="Guardar Proceso" icon="pi pi-check" [disabled]="processForm.invalid" />
