docs: updated README with profile screen #80

--- a/frontend/src/app/session/coachee-profile/coachee-profile.html
+++ b/frontend/src/app/session/coachee-profile/coachee-profile.html
@@ -21,7 +21,7 @@
         <span>{{this.coachee()?.company_address}}</span>
     </div>
 
-    <div class="flex justify-center gap-2 mt-8">
+    <div class="flex justify-end gap-2 mt-8">
         <p-button label="Cerrar" (onClick)="close()" />
     </div>
 </p-dialog>
