--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -89,7 +89,7 @@
     <p-drawer [(visible)]="visible" header="Opciones">
         <p-button class="w-full" icon="pi pi-face-smile" text label="Cuadro Emociones" severity="help"
             (onClick)="showDialogEmotions()" />
-        <p-button class="w-full" icon="pi pi-id-card" text label="Expediente" (onClick)="showProfile()" />
+        <p-button class="w-full" icon="pi pi-id-card" text label="Perfil Coachee" (onClick)="showProfile()" />
         <p-divider />
         <p-button class="w-full" icon="pi pi-history" text label="Historial" severity="warn" />
         <ul class="list-none p-0 m-0">
