--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -17,7 +17,8 @@
         </ng-template>
     </p-toolbar>
     <app-coachee-profile [coachee]="this.coachee()" [(visible)]="this.visibleProfile"></app-coachee-profile>
-    <p-dialog header="Notas Previas" [(visible)]="visibleNotes" position="top" draggable="false" [style]="{ width: '45rem' }">
+    <p-dialog header="Notas Previas" [(visible)]="visibleNotes" position="top" draggable="false"
+        [style]="{ width: '45rem' }">
         <div class="flex flex-col">
             <div class="py-1 flex flex-col">
                 <span class="font-medium">Objetivo Proceso:</span>
@@ -86,7 +87,7 @@
             <p-button label="Cerrar" (click)="visibleEmotions = false" />
         </div>
     </p-dialog>
-    <p-drawer [(visible)]="visible" header="Opciones">
+    <p-drawer [(visible)]="visible" header="Info & Herramientas">
         <p-button class="w-full" icon="pi pi-face-smile" text label="Cuadro Emociones" severity="help"
             (onClick)="showDialogEmotions()" />
         <p-button class="w-full" icon="pi pi-id-card" text label="Perfil Coachee" (onClick)="showProfile()" />
@@ -150,7 +151,7 @@
             <ng-template #header>
                 <span class="font-medium">Objetivo</span>
             </ng-template>
-            <span>Decidir siguiente paso</span>
+            <span>{{this.goal() ? this.goal() : '- No definido -'}}</span>
             <ng-template #icons>
                 <p-button icon="pi pi-info-circle" text severity="info" [size]="'small'" (click)="op.toggle($event)" />
             </ng-template>
@@ -175,17 +176,12 @@
             <ng-template #header>
                 <span class="font-medium">Desarrollo de la sesión</span>
             </ng-template>
-            <ul>
-                <li>I La semana bien</li>
-                <li>E Feliz</li>
-                <li>G Duda entre entregar o no</li>
-                <li>G Decide diseñar el producto</li>
-                <li>R No tiene diseñador</li>
-                <li>R No sabe donde encontrarlo ni precio</li>
-                <li>O Buscar diseñador por internet</li>
-                <li>O Diseño propio, sin contratar</li>
-                <li>W Calcular cual es el presupuesto</li>
-                <li>W Buscar diseñador esta semana</li>
+            <ul class="max-h-115 overflow-y-auto">
+                @for (note of notes(); track $index) {
+                <li>
+                    {{note}}
+                </li>
+                }
             </ul>
             <ng-template #icons>
                 <p-button icon="pi pi-info-circle" text severity="info" [size]="'small'" />
@@ -195,8 +191,8 @@
     <div class="w-full mb-auto">
         <div class="w-full" [hidden]="!hidden">
 
-            <label for="tasks" class="block mb-1 font-medium">Tareas para la siguiente <p-button
-                    icon="pi pi-info-circle" text severity="info" [size]="'small'" /></label>
+            <label for="tasks" class="block mb-1 font-medium">Planes de Acción <p-button icon="pi pi-info-circle" text
+                    severity="info" [size]="'small'" /></label>
             <p-table [value]="taskOptions()" selectionMode="single" [(selection)]="selectedTask" dataKey="id"
                 scrollHeight="flex" id="tasks" [size]="'small'">
                 <ng-template pTemplate="body" let-task>
@@ -210,12 +206,14 @@
         </div>
         <p-panel [hidden]="hidden">
             <ng-template #header>
-                <span class="font-medium">Tareas para la siguiente</span>
+                <span class="font-medium">Planes de Acción</span>
             </ng-template>
             <ul>
-                <li>10/10 17/10 23:59 Buscar diseñadores</li>
-                <li>10/10 18/10 23:59 Pedir 3 presupuestos</li>
-                <li>09/10 20/10 19:00 Contratar diseñador y enviarme mensaje</li>
+                @for (task of tasks(); track $index) {
+                <li>
+                    {{task}}
+                </li>
+                }
             </ul>
             <ng-template #icons>
                 <p-button icon="pi pi-info-circle" text severity="info" [size]="'small'" />
@@ -243,45 +241,53 @@
         <ng-template #header>
             <span class="font-medium">Introducir datos</span>
         </ng-template>
-        <p-tabs value="0">
-            <p-tablist>
-                <p-tab value="0">Objetivo</p-tab>
-                <p-tab value="1">Desarrollo</p-tab>
-                <p-tab value="2">Tareas</p-tab>
-            </p-tablist>
-            <p-tabpanels class="min-h-[9rem]">
-                <p-tabpanel value="0">
-                    <div class="w-full mt-auto flex flex-row gap-2 items-center">
-                        <textarea id="input" rows="2" pTextarea class="w-full" placeholder="Escribe aquí"></textarea>
-                        <p-button icon="pi pi-send" [size]="'large'"></p-button>
-                    </div>
-                </p-tabpanel>
-                <p-tabpanel value="1">
-                    <div class="flex flex-row justify-between">
-                        <p-selectbutton [options]="stateOptionsTab" [ngModel]="value" optionLabel="label"
-                            optionValue="value" aria-labelledby="basic" />
-                        <div class="flex gap-1">
-                            <p-button icon="pi pi-tags" [rounded]="true" [outlined]="true" severity="success" />
-                            <p-button icon="pi pi-user" [rounded]="true" [outlined]="true" severity="warn" />
-                            <p-button icon="pi pi-face-smile" [rounded]="true" [outlined]="true" severity="help" />
-                        </div>
-                    </div>
-                    <div class="w-full mt-auto flex flex-row gap-2 items-center">
-                        <textarea id="input" rows="2" pTextarea class="w-full" placeholder="Escribe aquí"></textarea>
-                        <p-button icon="pi pi-send" [size]="'large'"></p-button>
-                    </div>
-                </p-tabpanel>
-                <p-tabpanel value="2">
-                    <div class="w-full mt-auto flex flex-row gap-2 items-center">
-                        <input pInputText id="goal" class="w-full" value="Decidir siguiente paso">
-                        <input pInputText id="goal" value="Fecha Hora">
-                        <p-button icon="pi pi-send" [size]="'large'"></p-button>
-                    </div>
-                </p-tabpanel>
-            </p-tabpanels>
-        </p-tabs>
+        <div class="w-full mt-auto flex flex-row gap-2 items-center">
+            <textarea #textInput pTextarea id="input" rows="2" [autoResize]="true" class="w-full"
+                placeholder="Escribe aquí" [value]="message()" (input)="onMessageChange($event)"
+                (keydown.enter)="handleEnter($event, textInput)"></textarea>
+            <p-button icon="pi pi-send" [size]="'large'" (onClick)="sendMessage(textInput)"
+                (mousedown)="$event.preventDefault()"></p-button>
+        </div>
+        <!-- <div class="w-full mt-2 flex flex-row justify-between gap-2 items-center">
+            <div class="flex gap-1">
+                <input pInputText id="goal" placeholder="Fecha Hora">
+                <p-inputNumber id="commitment" [min]="1" [max]="10" suffix="/10" placeholder="Compromiso" class="w-full"
+                    inputStyleClass="w-full" />
+
+            </div>
+            <div>
+                <p-button icon="pi pi-tags" [rounded]="true" [outlined]="true" severity="success" />
+                <p-button icon="pi pi-user" [rounded]="true" [outlined]="true" severity="warn" />
+                <p-button icon="pi pi-face-smile" [rounded]="true" [outlined]="true" severity="help" />
+            </div>
+        </div> -->
         <ng-template #icons>
-            <p-button icon="pi pi-info-circle" text severity="info" [size]="'small'" />
+            <div class="flex flex-row gap-4">
+                <p-button label="Objetivo" [text]="this.selected !== 'O'" severity="help" [size]="'small'"
+                    (mousedown)="$event.preventDefault()" (onClick)="this.selected='O'" />
+
+                @if(this.session()?.is_grow){
+                <div class="flex flex-row">
+                    <p-button label="I" [text]="this.selected !== 'GI'" severity="secondary" [size]="'small'"
+                        (mousedown)="$event.preventDefault()" (onClick)="this.selected='GI'" />
+                    <p-button label="G" [text]="this.selected !== 'GG'" severity="info" [size]="'small'"
+                        (mousedown)="$event.preventDefault()" (onClick)="this.selected='GG'" />
+                    <p-button label="R" [text]="this.selected !== 'GR'" severity="warn" [size]="'small'"
+                        (mousedown)="$event.preventDefault()" (onClick)="this.selected='GR'" />
+                    <p-button label="O" [text]="this.selected !== 'GO'" severity="danger" [size]="'small'"
+                        (mousedown)="$event.preventDefault()" (onClick)="this.selected='GO'" />
+                    <p-button label="W" [text]="this.selected !== 'GW'" severity="contrast" [size]="'small'"
+                        (mousedown)="$event.preventDefault()" (onClick)="this.selected='GW'" />
+                </div>
+                }@else{
+                <p-button label="Nota" [text]="this.selected !== 'N'" severity="info" [size]="'small'"
+                    (mousedown)="$event.preventDefault()" (onClick)="this.selected='N'" />
+                }
+                <p-button label="PdA" [text]="this.selected !== 'P'" severity="success" [size]="'small'"
+                    (mousedown)="$event.preventDefault()" (onClick)="this.selected='P'" />
+                <p-button icon="pi pi-info-circle" text severity="info" [size]="'small'"
+                    (mousedown)="$event.preventDefault()" />
+            </div>
         </ng-template>
     </p-panel>
 </div>
